--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
     "formidable": "^3.5.1",
+    "fs-extra": "^11.1.1",
     "google-auth-library": "^9.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "shortid": "^2.2.16",
     "slugify": "^1.6.6",
